@@ -1,4 +1,5 @@
 0.7.0 - currently working on
+- [#3550] Fix: getUid should return an integer, not a string
 - [#3659] Fix: getSubpart('foo') fails for certain characters within the subpart delimiters
 - [#3372] Fix: Umlauts not encoded correctly in the e-mail headers (again)
 - [#3656] Fix: Don't use TYPO3_branch or compat_version
